Fixup contrast between ellipsoid image and background

--- a/content/slides/custom.scss
+++ b/content/slides/custom.scss
@@ -37,6 +37,10 @@ html .backgrounds {
   background-size: cover;
 }
 
+.light-background {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
 .reveal strong {
   font-weight: 900;
 }
